--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
     <h1>Ange's Portifolio</h1>
-    <img src="./Professional-headshot.jpg" />
+    <img src="Professional-headshot.jpg" />
 </html>
